--- a/src/main/resources/templates/system/dept/add.html
+++ b/src/main/resources/templates/system/dept/add.html
@@ -1,6 +1,6 @@
 <#include "/include/layout_ff.html">
-<@header>
-</@header>
+<#import "/spring.ftl" as spring/>
+<@header></@header>
 <body>
 <section class="content">
     <div class="container-fluid">
