--- a/src/main/resources/templates/system/menu/list.html
+++ b/src/main/resources/templates/system/menu/list.html
@@ -1,5 +1,6 @@
 <#include "/include/header.html">
 <#include "/include/scripts.html">
+<#import "/spring.ftl" as spring/>
 <html>
 <@header></@header>
 <body class="gray-bg">
@@ -17,8 +18,9 @@
                                                 <div class="box-header">
                                                     <div class="input-group">
                                                         <@shiro.hasPermission name="addMenu">
-                                                            <a class="btn btn-info btn-flat dialog" href="javascript:;" data-title="创建菜单" data-url="/system/menu/add" data-width="600" data-height="400">
-                                                                <i class="fa fa-plus"></i>创建菜单
+                                                            <a class="btn btn-info btn-flat dialog" href="javascript:;" data-title="<@spring.message code='system.menu.comm.action.createMenu'/>" data-url="/system/menu/add" data-width="600" data-height="400">
+                                                                <i class="fa fa-plus"></i>
+                                                                <@spring.message code='system.menu.comm.action.createMenu'/>
                                                             </a>
                                                         </@shiro.hasPermission>
                                                         <input type="text" name="search" value="${search!}" class="form-control" placeholder="Search">
@@ -38,57 +40,57 @@
                                     <div class="row">
                                         <div class="col-sm-12" style="overflow-x: auto;">
                                             <table class="table table-bordered table-hover dataTable dtr-inline">
+                                                <tr>
+                                                    <th>
+                                                        <input value="root" type="checkbox" class="minimal checkbox-toolbar">
+                                                        <@spring.message code='system.menu.list.rowNo'/>
+                                                    </th>
+                                                    <th><@spring.message code='system.menu.comm.name'/></th>
+                                                    <th><@spring.message code='system.menu.comm.code'/></th>
+                                                    <th><@spring.message code='system.menu.comm.url'/></th>
+                                                    <th><@spring.message code='system.menu.comm.icon'/></th>
+                                                    <th><@spring.message code='system.menu.comm.depth'/></th>
+                                                    <th><@spring.message code='system.menu.comm.resource'/></th>
+                                                    <th><@spring.message code='system.menu.comm.order'/></th>
+                                                    <th><@spring.message code='system.menu.comm.type'/></th>
+                                                    <th><@spring.message code='system.menu.comm.action'/></th>
+                                                </tr>
+                                                <#list pageData.getRecords() as menu>
                                                     <tr>
-                                                        <th>
-                                                            <input value="root" type="checkbox" class="minimal checkbox-toolbar">
-                                                            行号
-                                                        </th>
-                                                        <th>菜单名称</th>
-                                                        <th>编码</th>
-                                                        <th>访问地址</th>
-                                                        <th>显示图标</th>
-                                                        <th>深度</th>
-                                                        <th>资源</th>
-                                                        <th>排序</th>
-                                                        <th>类型</th>
-                                                        <th>操作</th>
+                                                        <td>
+                                                            <label>
+                                                                <input value="${menu.id}" name="roleState" type="checkbox" class="minimal checkbox-item">
+                                                                ${((pageData.current-1)*pageData.size +menu_index+1)!}
+                                                            </label>
+                                                        </td>
+                                                        <td>${(menu.name)!}</td>
+                                                        <td>${(menu.code)!}</td>
+                                                        <td><#if menu.deep?? && (menu.deep==1 || menu.deep==3) >--<#else><a href="${(menu.url)!'#'}" target="_blank">${(menu.url)!}</a></#if></td>
+                                                        <td>
+                                                            <i class="fa ${(menu.icon)!}"></i>
+                                                        </td>
+                                                        <td>${(menu.deep)!}</td>
+                                                        <td>${(menu.resource)!"--"}</td>
+                                                        <td>${(menu.sort)!}</td>
+                                                        <td><#if menu.deep?? && menu.deep==1 >目录<#elseif menu.deep?? && menu.deep==2>菜单<#else>功能</#if></td>
+                                                        <td>
+                                                            <@shiro.hasPermission name="editMenu">
+                                                                <a class="btn btn-primary btn-xs dialog" href="javascript:void(0);" data-title="<@spring.message code='system.menu.comm.action.editMenu'/>"
+                                                                   data-url="/system/menu/edit/${(menu.id)!}" data-width="700" data-height="500"
+                                                                   data-toggle="tooltip" title="<@spring.message code='system.menu.comm.action.edit'/>" data-placement="bottom"><@spring.message code='system.menu.comm.action.edit'/>
+                                                                </a>
+                                                            </@shiro.hasPermission>
+                                                            <@shiro.hasPermission name="deleteMenu">
+                                                                <a class="btn btn-danger btn-xs" data-toggle="tooltip" title="<@spring.message code='system.menu.comm.action.delete'/>" data-placement="bottom"
+                                                                   data-tiggle="ajax"
+                                                                   data-submit-url="/system/menu/delete?id=${(menu.id)!}"
+                                                                   data-confirm="<@spring.message code='system.menu.list.message.deleteMenu'/>"><@spring.message code='system.menu.comm.action.delete'/>
+                                                                </a>
+                                                            </@shiro.hasPermission>
+                                                        </td>
                                                     </tr>
-                                                    <#list pageData.getRecords() as menu>
-                                                        <tr>
-                                                            <td>
-                                                                <label>
-                                                                    <input value="${menu.id}" name="roleState" type="checkbox" class="minimal checkbox-item">
-                                                                    ${((pageData.current-1)*pageData.size +menu_index+1)!}
-                                                                </label>
-                                                            </td>
-                                                            <td>${(menu.name)!}</td>
-                                                            <td>${(menu.code)!}</td>
-                                                            <td><#if menu.deep?? && (menu.deep==1 || menu.deep==3) >--<#else><a href="${(menu.url)!'#'}" target="_blank">${(menu.url)!}</a></#if></td>
-                                                            <td>
-                                                                <i class="fa ${(menu.icon)!}"></i>
-                                                            </td>
-                                                            <td>${(menu.deep)!}</td>
-                                                            <td>${(menu.resource)!"--"}</td>
-                                                            <td>${(menu.sort)!}</td>
-                                                            <td><#if menu.deep?? && menu.deep==1 >目录<#elseif menu.deep?? && menu.deep==2>菜单<#else>功能</#if></td>
-                                                            <td>
-                                                                <@shiro.hasPermission name="editMenu">
-                                                                    <a class="btn btn-primary btn-xs dialog" href="javascript:void(0);" data-title="编辑菜单"
-                                                                       data-url="/system/menu/edit/${(menu.id)!}" data-width="700" data-height="500"
-                                                                       data-toggle="tooltip" title="编辑" data-placement="bottom">编辑
-                                                                    </a>
-                                                                </@shiro.hasPermission>
-                                                                <@shiro.hasPermission name="deleteMenu">
-                                                                    <a class="btn btn-danger btn-xs" data-toggle="tooltip" title="删除" data-placement="bottom"
-                                                                       data-tiggle="ajax"
-                                                                       data-submit-url="/system/menu/delete?id=${(menu.id)!}"
-                                                                       data-confirm="您确定要删除该条记录吗?">删除
-                                                                    </a>
-                                                                </@shiro.hasPermission>
-                                                            </td>
-                                                        </tr>
-                                                    </#list>
-                                                </table>
+                                                </#list>
+                                            </table>
                                         </div>
                                     </div>
                                     <div class="row">
