--- a/src/main/resources/templates/system/user/add.html
+++ b/src/main/resources/templates/system/user/add.html
@@ -11,7 +11,7 @@
                         <div style="display:flex;">
                             <label for="uname" class="col-sm-3 control-label text-right mt-2" ><@spring.message code='system.user.common.userName'/>:</label>
                             <div class="col-sm-9">
-                                <input type="text" id="uname" name="userName" class="form-control" placeholder="<@spring.message code='system.user.placeholder.name'/>" lay-verify="required|name|check" check-url="/system/user/checkName">
+                                <input type="text" id="uname" name="userName" class="form-control" placeholder="<@spring.message code='system.user.placeholder.username'/>" lay-verify="required|name|check" check-url="/system/user/checkName">
                             </div>
                         </div>
                     </div>
