--- a/src/main/resources/templates/system/dept/add.html
+++ b/src/main/resources/templates/system/dept/add.html
@@ -5,29 +5,39 @@
 <section class="content">
     <div class="container-fluid">
         <div class="card-body"/>
-        <form action="/system/dept/doAdd" class="form-horizontal layui-form layui-form-pane" method="post" role="form">
-            <div class="box-body">
-                <div class="form-group">
-                    <div style="display:flex;">
-                        <label class="col-sm-2" for="deptName">部门名称</label>
-                        <input class="col-sm-10" check-url="/system/dept/checkDept" class="form-control" id="deptName"
-                               lay-verify="required|deptName|check" name="deptName" placeholder="请输入部门名称" type="text">
+            <form action="/system/dept/doAdd" class="form-horizontal layui-form layui-form-pane" method="post" role="form">
+                <div class="box-body">
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <label class="col-sm-3 control-label text-right mt-2" for="deptName"><@spring.message code='system.department.common.departmentName'/>:</label>
+                            <div class="col-sm-9">
+                                <input check-url="/system/dept/checkDept" class="form-control" id="deptName" lay-verify="required|deptName|check" name="deptName" placeholder="<@spring.message code='system.department.placeholder.department'/>" type="text">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <label class="col-sm-3 control-label text-right mt-2"><@spring.message code='system.department.common.description'/>:</label>
+                            <div class="col-sm-9">
+                                <textarea class="form-control" name="deptDesc" placeholder="<@spring.message code='system.department.placeholder.description'/>" rows="3"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <div class="col-sm-3">
+                                &nbsp;
+                            </div>
+                            <div class="col-sm-9">
+                                <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
+                                    <i class="fa fa-save"></i>
+                                    <@spring.message code='system.department.common.action.submit'/>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div style="display:flex;">
-                        <label class="col-sm-2">部门描述</label>
-                        <textarea class="form-control col-sm-10" name="deptDesc" placeholder="请输入描述，最多300个字符..." rows="3"></textarea>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div style="display:flex;">
-                        <button class="btn btn-success" lay-filter="submit" lay-submit type="submit"><i class="fa fa-save"></i>提交
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </form>
+            </form>
         </div>
     </div>
 </section>
