--- a/src/main/resources/templates/system/dept/edit.html
+++ b/src/main/resources/templates/system/dept/edit.html
@@ -8,27 +8,30 @@
         <form class="form-horizontal layui-form layui-form-pane" method="post" action="/system/dept/doEdit">
             <div class="form-group">
                 <div style="display:flex;">
-                    <label for="deptName" class="col-sm-2 control-label">部门名称</label>
+                    <label for="deptName" class="col-sm-3 control-label text-right mt-2"><@spring.message code='system.department.common.departmentName'/>:</label>
                     <input type="hidden" value="${(dept.id)}" name="id"/>
-                    <div class="col-sm-10">
-                        <input type="text" id="deptName" name="deptName" class="form-control" value="${(dept.deptName)!}" lay-verify="required" placeholder="请输入部门名称">
+                    <div class="col-sm-9">
+                        <input type="text" id="deptName" name="deptName" class="form-control" value="${(dept.deptName)!}" lay-verify="required" placeholder="<@spring.message code='system.department.placeholder.department'/>">
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div style="display:flex;">
-                    <label class="col-sm-2 control-label">部门描述</label>
-                    <div class="col-sm-10">
-                        <textarea class="form-control" name="deptDesc" rows="3" placeholder="请输入描述，最多300个字符 ...">${(dept.deptDesc)!}</textarea>
+                    <label class="col-sm-3 control-label text-right mt-2"><@spring.message code='system.department.common.description'/>:</label>
+                    <div class="col-sm-9">
+                        <textarea class="form-control" name="deptDesc" rows="3" placeholder="<@spring.message code='system.department.placeholder.description'/>">${(dept.deptDesc)!}</textarea>
                     </div>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-12">
-                    <label class="col-sm-1 control-label"></label>
-                    <div class="col-sm-11">
-                        <button type="submit" class="btn btn-success" lay-submit lay-filter="submit"><i class="fa fa-save"></i>
-                            提 交
+                <div style="display:flex;">
+                    <div class="col-sm-3">
+                        &nbsp;
+                    </div>
+                    <div class="col-sm-9">
+                        <button type="button" name="save" class="btn btn-success" lay-submit lay-filter="submit">
+                            <i class="fa fa-save"></i>
+                            <@spring.message code='system.department.common.action.submit'/>
                         </button>
                     </div>
                 </div>
