--- a/src/main/resources/templates/system/dept/list.html
+++ b/src/main/resources/templates/system/dept/list.html
@@ -21,7 +21,7 @@
                                                             <a class="btn btn-info btn-flat dialog" href="javascript:;" data-title="<@spring.message code='system.department.common.action.createDepartment'/>"
                                                                data-url="/system/dept/add" data-width="650" data-height="300"><i class="fa fa-plus"></i><@spring.message code='system.department.common.action.createDepartment'/></a>
                                                         </@shiro.hasPermission>
-                                                        <input type="text" name="search" value="${search!}" class="form-control" placeholder="Search">
+                                                        <input type="text" name="search" value="${search!}" class="form-control" placeholder="<@spring.message code='system.department.placeholder.search'/>">
                                                         <div class="input-group">
                                                             <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
                                                             <a href="/system/dept/list/1" class="btn btn-default"><i class="fa fa-sync" style="margin-top:6px;"></i></a>
@@ -53,7 +53,7 @@
                                                             </@shiro.hasPermission>
                                                             <@shiro.hasPermission name="deleteDept">
                                                                 <a class="btn btn-danger btn-xs" data-tiggle="ajax" data-submit-url="/system/dept/delete?id=${(dept.id)!}"
-                                                                   data-confirm="您确定要删除该条记录吗?"><i class="fa fa-times"></i><@spring.message code='system.department.common.action.delete'/></a>
+                                                                   data-confirm="<@spring.message code='system.department.list.message.deleteUser'/>"><i class="fa fa-times"></i><@spring.message code='system.department.common.action.delete'/></a>
                                                             </@shiro.hasPermission>
                                                         </td>
                                                     </tr>
