--- a/src/main/resources/templates/system/menu/list.html
+++ b/src/main/resources/templates/system/menu/list.html
@@ -125,5 +125,5 @@
         </section>
     </div>
 </body>
-<@scripts "/${rootContext}/app/js/main.js"></@scripts>
+<@scripts "/${rootContext}/app/js/system/menu/menu.js"></@scripts>
 </html>
