--- a/src/main/resources/templates/system/menu/editAction.html
+++ b/src/main/resources/templates/system/menu/editAction.html
@@ -1,74 +1,90 @@
 <#include "/include/layout_ff.html">
-<@header>
-</@header>
+<#import "/spring.ftl" as spring/>
+<@header></@header>
 <body>
 <section class="content">
     <div class="container-fluid">
         <div class="card-body"/>
-        <form class="form-horizontal layui-form layui-form-pane" action="/system/menu/doEdit" onsubmit="return false;">
-            <input type="hidden" value="${menuConfig.id}" name="id">
-            <div class="box-body">
-                <div class="form-group">
-                    <div style="display:flex;">
-                        <label class="col-sm-3 control-label">选择目录/菜单</label>
-                        <div class="col-sm-9">
-                            <select id="dir" class="form-control select2" style="width: 100%;" lay-verify="required" lay-ignore>
-                                <option value="" selected="selected">--请选择--</option>
-                                <#list list as m>
-                                    <option value="${(m.id)!}" ${(m.id==pSysMenu.pid)?string('selected="selected"','')}> ${(m.code)!}-${(m.name)!}
+            <form class="form-horizontal layui-form layui-form-pane" action="/system/menu/doEdit" onsubmit="return false;">
+                <input type="hidden" value="${menuConfig.id}" name="id">
+                <div class="box-body">
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.menu.add.action.chooseMenu'/>:
+                            </label>
+                            <div class="col-sm-9">
+                                <select class="form-control select2" lay-verify="required" lay-ignore>
+                                    <option value="" selected="selected"><@spring.message code='system.menu.comm.select'/></option>
+                                    <#list list as m>
+                                        <option value="${(m.id)!}" ${(m.id==pSysMenu.pid)?string('selected="selected"','')}>${(m.code)!}-${(m.name)!}
+                                        </option>
+                                    </#list>
+                                </select>
+                                <select id="pid" name="pid" class="form-control select2" style="width: 100%;" lay-verify="required" lay-ignore>
+                                    <option value="${(pSysMenu.id)!}" selected="selected">${(pSysMenu.code)!}-${(pSysMenu.name)!}
                                     </option>
-                                </#list>
-                            </select>
-                            <select id="pid" name="pid" class="form-control select2" style="width: 100%;" lay-verify="required" lay-ignore>
-                                <option value="${(pSysMenu.id)!}" selected="selected">${(pSysMenu.code)!}-${(pSysMenu.name)!}
-                                </option>
-                            </select>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.menu.comm.code'/>:
+                            </label>
+                            <div class="col-sm-9">
+                                <input type="text" name="code" class="form-control" value="${(menuConfig.code)!}" lay-verify="required">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.menu.comm.name.functionName'/>:
+                            </label>
+                            <div class="col-sm-9">
+                                <input type="text" name="menuName" value="${(menuConfig.name)!}" class="form-control" lay-verify="required">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.menu.comm.resource'/>:
+                            </label>
+                            <div class="col-sm-9">
+                                <input type="text" id="resource" name="resource" value="${(menuConfig.resource)!}" class="form-control" lay-verify="required">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <label class="col-sm-3 control-label text-right mt-2">
+                                <@spring.message code='system.menu.comm.order'/>:
+                            </label>
+                            <div class="col-sm-9">
+                                <input type="text" name="sort" value="${(menuConfig.sort)!}" class="form-control" lay-verify="required|number"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div style="display:flex;">
+                            <div class="col-sm-3">
+                                &nbsp;
+                            </div>
+                            <div class="col-sm-9">
+                                <button type="submit" class="btn btn-success" lay-submit lay-filter="submit">
+                                    <i class="fa fa-save"></i>
+                                    <@spring.message code='system.menu.comm.action.submit'/>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div style="display:flex;">
-                        <label class="col-sm-3 control-label">编码</label>
-                        <div class="col-sm-9">
-                            <input type="text" name="code" class="form-control" value="${(menuConfig.code)!}" placeholder="请输入编码" lay-verify="required">
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div style="display:flex;">
-                        <label class="col-sm-3 control-label">功能名称</label>
-                        <div class="col-sm-9" style="padding-top:7px">
-                            <input type="text" name="menuName" value="${(menuConfig.name)!}" class="form-control" placeholder="请输入功能名称" lay-verify="required">
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div style="display:flex;">
-                        <label class="col-sm-3 control-label">权限资源</label>
-                        <div class="col-sm-9" style="padding-top:7px">
-                            <input type="text" id="resource" name="resource" value="${(menuConfig.resource)!}" class="form-control" placeholder="请输入权限资源名称" lay-verify="required">
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div style="display:flex;">
-                        <label class="col-sm-3 control-label">排序</label>
-                        <div class="col-sm-9" style="padding-top:7px">
-                            <input type="text" name="sort" value="${(menuConfig.sort)!}" class="form-control" placeholder="请输入排序" lay-verify="required|number"/>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-3 control-label"></label>
-                    <div class="col-sm-9">
-                        <button type="submit" class="btn btn-success" lay-submit lay-filter="submit"><i class="fa fa-save"></i> 提 交</button>
-                        <a class="btn btn-default" href="javascript:parent.layer.closeAll('iframe');"><i class="fa fa-close"></i> 取消</a>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
+            </form>
+        </div>
     </div>
 </section>
-<@scripts "/${rootContext}/app/js/main.js"></@scripts>
+<@scripts "/${rootContext}/app/js/system/menu/menu.js"></@scripts>
 </body>
